--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,7 +19,7 @@ Metrics/BlockLength:
   AllowedMethods: ['describe']
   Max: 30
 Metrics/ParameterLists:
-  Enabled: false
+  Max: 6
 
 Style/Documentation:
   Enabled: false
